--- a/src/pages/making-order.html
+++ b/src/pages/making-order.html
@@ -52,7 +52,7 @@
                         </li>
                     </ul>
                     <div class="first-row__schedule">Пн-Пт: 9:00 - 19:00, Сб: 10 - 14</div>
-                    <a href="#" class="first-row__personal-area">Личный кабинет</a>
+                    <a href="log-in.html" class="first-row__personal-area">Личный кабинет</a>
                 </div>
                 <div class="header__row header__row--second">
                     <a href="index.html" class="second-row__main-link">
@@ -185,14 +185,14 @@
                                     <span class="making-order-delivery__price">459 ₽</span>
                                 </label>
                                 <label class="making-order-delivery__item">
-                                    <input type="radio" name="delivery" value="post-office" id="delivery-post-office"
+                                    <input type="radio" name="delivery" value="sdek-courier" id="delivery-sdek-courier"
                                         class="visually-hidden">
                                     <span class="making-order__radio"></span>
                                     <span class="making-order-delivery__name">Курьер СДЭК - &nbsp;</span>
                                     <span class="making-order-delivery__price">849 ₽</span>
                                 </label>
                                 <label class="making-order-delivery__item">
-                                    <input type="radio" name="delivery" value="sdek-courier" id="delivery-sdek-courier"
+                                    <input type="radio" name="delivery" value="ems-courier" id="delivery-ems-courier"
                                         class="visually-hidden">
                                     <span class="making-order__radio"></span>
                                     <span class="making-order-delivery__name">Курьером Почты России (EMS) - &nbsp;</span>
