--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -52,7 +52,7 @@
                         </li>
                     </ul>
                     <div class="first-row__schedule">Пн-Пт: 9:00 - 19:00, Сб: 10 - 14</div>
-                    <a href="#" class="first-row__personal-area">Личный кабинет</a>
+                    <a href="log-in.html" class="first-row__personal-area">Личный кабинет</a>
                 </div>
                 <div class="header__row header__row--second">
                     <a href="index.html" class="second-row__main-link">
